# medvision-ai

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml  pages.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/schemas/: studies.py
backend/app/services/: demo_data.py  reports.py  segmentation.py  storage.py
backend/tests/: test_api.py
docs/: API.md  demo.css  demo.js  index.html
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  types.d.ts
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
frontend/app/api/health/: route.ts
frontend/app/dashboard/: page.tsx
frontend/app/studies/[id]/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/dashboard/: stats.tsx  study-table.tsx
frontend/components/layout/: nav.tsx
frontend/components/medical/: dicom-viewer.tsx  reconstruction-viewer.tsx  report-summary.tsx
frontend/components/ui/: button.tsx  card.tsx  progress.tsx
frontend/lib/: api.ts  types.ts  utils.ts
frontend/prisma/: schema.prisma  seed.ts
frontend/store/: study-store.ts
