[project]
name = "medvision-ai-backend"
version = "0.1.0"
description = "FastAPI backend for MedVisionAI"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.12",
  "sqlalchemy>=2.0.35",
  "psycopg[binary]>=3.2.3",
  "boto3>=1.35.50",
  "monai>=1.4.0",
  "torch>=2.5.0",
  "nibabel>=5.3.2",
  "pydicom>=3.0.1"
]

[project.optional-dependencies]
dev = ["pytest>=8.3.3", "httpx>=0.27.2", "ruff>=0.7.3"]

[tool.ruff]
line-length = 100
target-version = "py311"
